--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -1,6 +1,6 @@
 .menu {
 	position: absolute;
-	padding: 0.2rem 0.25rem;
+	padding: 0.25rem;
 	margin: 0;
 	display: flex;
 	width: auto;
